--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="product">
         <img src="image.png" alt="Perfume Floral">
-        <h3>Perfume Floral</h3>
+        <h3>Lattafa Yara</h3>
         <p>Uma fragrância delicada e encantadora.</p>
         <p><strong>Preço: ¥7000</strong></p>
         <div class="status available">Disponível</div>
@@ -61,7 +61,7 @@
 
     <div class="product">
         <img src="image.png" alt="Perfume Amadeirado">
-        <h3>Perfume Amadeirado</h3>
+        <h3>Lattafa Asad</h3>
         <p>Notas sofisticadas para momentos especiais.</p>
         <p><strong>Preço: ¥9999</strong></p>
         <div class="status unavailable">Esgotado</div>
@@ -69,7 +69,7 @@
 
     <div class="product">
         <img src="image.png" alt="Perfume Cítrico">
-        <h3>Perfume Cítrico</h3>
+        <h3>Lattafa khamrah</h3>
         <p>Fresco e vibrante para o dia a dia.</p>
         <p><strong>Preço: ¥9000</strong></p>
         <div class="status available">Disponível</div>
