--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
                 name: "Asad - Lattafa",
                 description: "Uma fragrância intensa e marcante com notas orientais.",
                 price: "¥7000",
-                image: "https://nrvn00452.github.io/tokyofrangnancee/images/asad.png",
+                image: "image1.png",
                 available: true
             },
             {
                 name: "Khamrah - Lattafa",
                 description: "Notas quentes e envolventes para ocasiões especiais.",
                 price: "¥8000",
-                image: "https://nrvn00452.github.io/tokyofrangnancee/images/khamrah.png",
+                image: "image2.png",
                 available: true
             },
             {
                 name: "Yara - Lattafa",
                 description: "Uma essência doce e sofisticada, perfeita para o dia a dia.",
                 price: "¥6500",
-                image: "https://nrvn00452.github.io/tokyofrangnancee/images/yara.png",
+                image: "image3.png",
                 available: true
             }
         ];
@@ -106,4 +106,3 @@
     </script>
 </body>
 </html>
-
