--- a/index.html
+++ b/index.html
@@ -3,106 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tokyo Fragrance - Catálogo de Perfumes</title>
+    <title>Tokyo Fragrance - Imagens dos Perfumes</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
             text-align: center;
         }
-        header {
-            background-color: #f8b400;
-            color: white;
-            padding: 1em 0;
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
         }
-        .product {
-            margin: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            display: inline-block;
+        .gallery img {
             width: 250px;
-        }
-        .product img {
-            max-width: 100%;
             height: auto;
-            border-radius: 5px;
-        }
-        .status {
-            margin-top: 10px;
+            border-radius: 10px;
+            border: 1px solid #ddd;
             padding: 5px;
-            border-radius: 5px;
-            color: white;
-            cursor: pointer;
-        }
-        .available {
-            background-color: #4CAF50;
-        }
-        .unavailable {
-            background-color: #FF5733;
+            background: #fff;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Tokyo Fragrance - Catálogo de Perfumes</h1>
-        <p>Confira nossas fragrâncias disponíveis no Japão 🇯🇵</p>
+        <h1>Tokyo Fragrance - Imagens dos Perfumes</h1>
     </header>
-
-    <div id="catalog"></div>
-
-    <script>
-        const products = [
-            {
-                name: "Asad - Lattafa",
-                description: "Uma fragrância intensa e marcante com notas orientais.",
-                price: "¥7000",
-                image: "imagens/asad.png",
-                available: true
-            },
-            {
-                name: "Khamrah - Lattafa",
-                description: "Notas quentes e envolventes para ocasiões especiais.",
-                price: "¥8000",
-                image: "imagens/khamrah.png",
-                available: true
-            },
-            {
-                name: "Yara - Lattafa",
-                description: "Uma essência doce e sofisticada, perfeita para o dia a dia.",
-                price: "¥6500",
-                image: "imagens/yara.png",
-                available: true
-            }
-        ];
-
-        function renderCatalog() {
-            const catalog = document.getElementById('catalog');
-            catalog.innerHTML = '';
-
-            products.forEach((product, index) => {
-                catalog.innerHTML += `
-                    <div class="product">
-                        <img src="${product.image}" alt="${product.name}">
-                        <h3>${product.name}</h3>
-                        <p>${product.description}</p>
-                        <p><strong>Preço: ${product.price}</strong></p>
-                        <div class="status ${product.available ? 'available' : 'unavailable'}" onclick="toggleStatus(${index})">
-                            ${product.available ? 'Disponível' : 'Esgotado'}
-                        </div>
-                    </div>
-                `;
-            });
-        }
-
-        function toggleStatus(index) {
-            products[index].available = !products[index].available;
-            renderCatalog();
-        }
-
-        renderCatalog();
-    </script>
+    <div class="gallery">
+        <img src="imagens/asad.png" alt="Asad - Lattafa">
+        <img src="imagens/khamrah.png" alt="Khamrah - Lattafa">
+        <img src="imagens/yara.png" alt="Yara - Lattafa">
+    </div>
 </body>
 </html>
